<resources>
    <string name="app_name">Note it</string>
    <string name="action_settings">Settings</string>
    <string name="title_hint">title_hint</string>
    <string name="description_hint">description_hint</string>
    <string name="idea">Idea</string>
    <string name="todo">Todo</string>
    <string name="important">Important</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="action_add">Add</string>
    <string name="settings">Settings</string>
    <string name="fast">Fast</string>
    <string name="slow">Slow</string>
    <string name="none">None</string>
    <string name="sound">Sound</string>
    <string name="on">On</string>
    <string name="animations">Animations</string>
    <string name="No_records_yet">No records yet.</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
