<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="anupreksha.com.noteit.SettingsActivity">

    <TextView
        android:id="@+id/settings_tilte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TextView
        android:id="@+id/sound_tilte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settings_tilte"
        android:layout_marginStart="39dp"
        android:layout_marginTop="43dp"
        android:text="@string/sound" />

    <CheckBox
        android:id="@+id/checkBoxSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/sound_tilte"
        android:layout_below="@+id/sound_tilte"
        android:layout_marginTop="30dp"
        android:text="@string/on" />

    <TextView
        android:id="@+id/anims_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/sound_tilte"
        android:layout_centerVertical="true"
        android:text="@string/animations" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/anims_title"
        android:layout_below="@+id/anims_title"
        android:layout_marginTop="30dp">

        <RadioButton
            android:id="@+id/radioFast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fast" />

        <RadioButton
            android:id="@+id/radioSlow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/slow" />

        <RadioButton
            android:id="@+id/radioNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/none" />
    </RadioGroup>


</RelativeLayout>
