<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTitle"
        android:layout_below="@+id/editTitle"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:hint="@string/description" />


    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editDescription"
        android:layout_below="@+id/editDescription"
        android:layout_marginTop="200dp"
        android:background="#ff0000"
        android:padding="10dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnCancel"
        android:layout_alignBottom="@+id/btnCancel"
        android:layout_alignEnd="@+id/editDescription"
        android:background="#00ff00"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/ok" />
</RelativeLayout>